--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/restaurant
+spring.datasource.url=jdbc:mysql://localhost:3306/restaurant?allowMultiQueries=true
 spring.datasource.username=logos
 spring.datasource.password=vagrant
